[package]
name = "toy-pay"
authors = ["Jake Gallow <Ragnyll>"]
version = "0.1.0"
edition = "2021"
rust-version = "1.58"
readme = "README.md"
repository = "https://github.com/Ragnyll/toy-pay"

[dependencies]
csv = "1.1"
exitcode = "^1"
thiserror = "^1.0"
serde = { version = "^1", features = ["derive"] }
